tests/parser/bad/exps/type_t-map-cid-lparen-cid-map-cid-underscore.scilla
let a : Map Uint128 (Option Map Uint128 uint128) = Emp Uint128 (Option Map Uint128 uint128) in True
